--- a/style.css
+++ b/style.css
@@ -86,3 +86,33 @@ footer {
 #pagamento h2 {
   color: #5e2b7a;
 }
+/* BOTÃO DO CARRINHO */
+#carrinho-btn {
+  position: fixed;
+  top: 15px;
+  right: 15px;
+
+  background: #7b5cff; /* roxo suave */
+  color: white;
+
+  padding: 12px 16px;
+  border-radius: 50px;
+
+  font-size: 18px;
+  cursor: pointer;
+
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  z-index: 1000;
+}
+
+/* CONTADOR DO CARRINHO */
+#contador-carrinho {
+  background: white;
+  color: #7b5cff;
+
+  padding: 2px 8px;
+  border-radius: 50%;
+
+  font-size: 14px;
+  margin-left: 5px;
+}
